--- a/zdroje.ipynb
+++ b/zdroje.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "varying-elements",
+   "cell_type": "markdown",
+   "id": "legitimate-spain",
    "metadata": {},
    "source": [
     "odkazy na zdroje:\n",
@@ -14,17 +14,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "closed-administration",
-   "metadata": {},
-   "source": [
-    "priorita=0\n",
-    "https://github.com/authlib/example-oauth2-server "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "determined-cricket",
+   "cell_type": "markdown",
+   "id": "posted-harmony",
    "metadata": {},
    "source": [
     "priorita=0\n",
@@ -34,8 +25,44 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "upset-playing",
+   "cell_type": "markdown",
+   "id": "empty-slovenia",
+   "metadata": {},
+   "source": [
+    "priorita=1\n",
+    "https://docs.github.com/en/developers/apps/authorizing-oauth-apps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "concrete-society",
+   "metadata": {},
+   "source": [
+    "priorita=2\n",
+    "https://www.varonis.com/blog/what-is-oauth/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "junior-quilt",
+   "metadata": {},
+   "source": [
+    "priorita=0\n",
+    "https://github.com/authlib/example-oauth2-server "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "instant-coordinator",
+   "metadata": {},
+   "source": [
+    "priorita=1\n",
+    "https://github.com/naxit-01/oauthenticator/blob/master/oauthenticator/generic.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "designed-favorite",
    "metadata": {},
    "source": [
     "priorita=1\n",
@@ -43,8 +70,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "uniform-formation",
+   "cell_type": "markdown",
+   "id": "dominant-bleeding",
    "metadata": {},
    "source": [
     "?priorita=2\n",
@@ -52,12 +79,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "elegant-trail",
+   "cell_type": "markdown",
+   "id": "integrated-consistency",
    "metadata": {},
    "source": [
     "priorita=3\n",
     "https://www.ory.sh/run-oauth2-server-open-source-api-security/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "defensive-prague",
+   "metadata": {},
+   "source": [
+    "priorita=3 https://medium.com/google-cloud/understanding-oauth2-and-building-a-basic-authorization-server-of-your-own-a-beginners-guide-cf7451a16f66\n",
+    "    https://medium.com/@ratrosy/building-a-basic-authorization-server-using-authorization-code-flow-c06866859fb1"
    ]
   }
  ],
